# aa-live-aitemplate-build

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  main.py  notestodo.md  pyproject.toml  setup-prompts.md  steps and notes.md  summary.md
.claude/commands/: commit.md  create-prompt.md
.claude/external_docs/: ai-coding-project-setup-guide.md
.claude/reports/: ignore-comments-report-2026-02-27.md
alembic/: env.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  health.py  logging.py  middleware.py
app/core/tests/: test_config.py  test_database.py  test_exceptions.py  test_health.py  test_logging.py  test_middleware.py
app/shared/: models.py  schemas.py  utils.py
app/shared/tests/: test_models.py  test_schemas.py  test_utils.py
app/tests/: conftest.py  test_database_integration.py  test_main.py
docs/plans/: 2026-02-22-structured-logging-design.md  2026-02-22-structured-logging.md  2026-02-27-database-infrastructure-design.md  2026-02-27-database-infrastructure.md
tests/: test_main.py
