[project]
name = "aa-live-aitemplate-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations (type hints)
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "S311", # Standard random is fine for non-crypto
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"

# --- Strictness ---
# Enables all optional error checking flags (see `mypy --help` for full list).
# Covers: disallow_any_generics, disallow_subclassing_any, disallow_untyped_calls,
#         disallow_untyped_defs, disallow_incomplete_defs, check_untyped_defs,
#         disallow_untyped_decorators, warn_redundant_casts, warn_unused_ignores,
#         warn_return_any, no_implicit_reexport, strict_equality, extra_checks
strict = true

# Explicitly listed for documentation clarity (redundant under strict = true)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Catch dead/unreachable code
warn_unreachable = true

# Treat bytearray/memoryview as distinct from bytes (mypy 2.0 default)
strict_bytes = true

# Catch misconfigured [[tool.mypy.overrides]] sections
warn_unused_configs = true

# --- Error output (optimised for AI self-correction) ---
# Show surrounding source lines with each error
show_error_context = true
# Show error codes so AI can look them up
show_error_codes = true
# Append documentation links next to each error code
show_error_code_links = true
# Show column numbers for precise error location
show_column_numbers = true
# Pretty output: soft-wrap, source snippets, caret markers
pretty = true

# --- Per-module overrides ---
[[tool.mypy.overrides]]
module = "tests.*"
# Tests use assert statements and may have looser typing
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff.format]
# Full output gives AI the source-code context needed for self-correction
quote-style = "double"
indent-style = "space"
